# AutoLSM

./: .gitignore  Cargo.toml  reomte-task.md  rust-toolchain.toml
.cargo/: config.toml
crates/autolsm/: Cargo.toml  build.rs
crates/autolsm-common/: Cargo.toml
crates/autolsm-common/src/: lib.rs  userspace.rs
crates/autolsm-ebpf/: Cargo.toml  autolsm.bpf.c
crates/autolsm-ebpf/src/: main.rs
crates/autolsm/src/: audit.rs  collector.rs  lib.rs  llm.rs  main.rs  normalizer.rs  resolver.rs  selinux.rs  simple_gen.rs  state_machine.rs  store.rs  validator.rs
crates/autolsm/tests/: integration_test.rs
docs/: architecture.md  demo-run-output.md  remote-task-acceptance.md
final_results/: README.md  installed-modules-llm.txt  installed-modules.txt
scripts/: check-prereqs.sh  demo-auto.sh  demo.sh  e2e-test.sh
xtask/src/: main.rs
