[package]
name = "autolsm-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
# "userspace" enables std-requiring types (NormalizedAccess, AvcDenial etc.)
userspace = ["serde"]

[dependencies]
# Serde is optional — only for userspace serialization
serde = { version = "1", features = ["derive"], optional = true }

