[package]
name = "autolsm"
version = "0.1.0"
edition = "2021"

[dependencies]
autolsm-common = { path = "../autolsm-common", features = ["userspace"] }
aya = "0.14"
aya-log = "0.3"
anyhow = { workspace = true }
clap = { workspace = true }
lru = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }

[profile.release]
opt-level = "s"
lto = true
