[package]
name = "autolsm"
version = "0.1.0"
edition = "2021"

[dependencies]
autolsm-common = { path = "../autolsm-common", features = ["userspace"] }
aya = "0.14"
aya-log = "0.3"
async-trait = "0.1"
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
lru = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
seahash = "4.1.0"
reqwest.workspace = true
fastrand = "2.4.1"

[build-dependencies]
anyhow = { workspace = true }
